--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,14 +13,15 @@
                 <div class="service-box">
                     <img class="charity-img" src="/img/rnli.png">
                     <h3>RNLI</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <p class="text-muted">The RNLI is the charity that saves lives at sea. They do this through lifeboat search and rescue, lifeguards, water safety education and flood rescue.</p>
                 </div>
             </div>
             <div class="col text-center">
                 <div class="service-box">
                     <img class="charity-img" src="/img/emct.png">
                     <h3>Ellen MacArthur Cancer Trust</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <p class="text-muted">The Ellen MacArthur Cancer Trust inspires young people aged 8-24 to believe in a brighter future living through and
+                    beyond cancer.</p>
                 </div>
             </div>
         </div>
