--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                     <a class="page-scroll" href="#charity">Charity</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Get Involved</a>
+                    <a class="page-scroll" href="#photos">Photos</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Support Us</a>
