--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,8 +176,9 @@ header {
             }
             p {
                 font-weight: 300;
-                color: rgba(white, .7);
-                font-size: 16px;
+                text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+                color: rgba(white, 1);
+                font-size: 20px;
                 margin-bottom: 50px;
             }
         }
@@ -196,7 +197,7 @@ header {
                 margin-left: auto;
                 margin-right: auto;
                 p {
-                    font-size: 18px;
+                    font-size: 24px;
                     max-width: 80%;
                     margin-left: auto;
                     margin-right: auto;
