--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,12 +1,12 @@
-<section class="bg-primary" id="about">
+<section class="bg-primary map" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">In 1963, 4 SigneTs crossed the Channel - Just to prove they could!</h2>
                 <hr class="light">
-                <p class="text-faded">60 years ago, a small convoy of sturdy little dinghies set out to disprove the myth around seaworthiness of <b>SigneTs</b></p>
-                <p class="text-faded">This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of RNLI and Ellen MacArthur Cancer Trust!</p>
-
+                <p">60 years ago, a small convoy of sturdy little dinghies set out to disprove the myth around seaworthiness of <b>SigneTs</b></p>
+                <p>This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of RNLI and Ellen MacArthur Cancer Trust!</p>
+                
                 <h3>When: 10th June 2022</h3>
                 <h3>Where: Dover to Calais</h3>
                 <br>
