--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,15 +2,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">In 1963, 4 SigneTs crossed the Channel - Just to prove they could!</h2>
+                <h2 class="section-heading">In 1963, 4 SigneTs crossed the Channel - just to prove they could!</h2>
                 <hr class="light">
-                <p">60 years ago, a small convoy of sturdy little dinghies set out to disprove the myth around seaworthiness of <b>SigneTs</b></p>
+                <p">60 years ago, a small convoy of sturdy little dinghies set out to disprove the myth around seaworthiness of <b>SigneTs</b>.</p>
                 <p>This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of RNLI and Ellen MacArthur Cancer Trust!</p>
                 
                 <h3>When: 10th June 2022</h3>
                 <h3>Where: Dover to Calais</h3>
                 <br>
-                <a href="https://gofund.me/b0fb7163" class="btn btn-default btn-xl">Donate!</a>
+                <br>
+                <a href="https://gofund.me/b0fb7163" target="_blank" class="btn btn-default btn-xl">Donate!</a>
             </div>
         </div>
     </div>
