--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>60th Anniversary SigneT Channel Crossing</h1>
+            <h1>60th Anniversary SigneT Dover to Calais</h1>
             <hr>
             <p>Celebrating a significant event in class history</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
