--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,12 +6,23 @@
                 <hr class="primary">
                 <p>Wanting to provide sponsorship or support us in another way, get in touch!</p>
             </div>
-        <div class="col-lg-10 col-lg-offset-1 text-center">
+        <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="mailto:{{ site.email }}">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.email }}</p>
             </a>
         </div>
-
+        <div class="col-lg-2 col-lg-offset-1 text-center">
+            <a href="http://www.sailsignet.org.uk">
+                <i class="fa fa-home fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>Website</p>
+            </a>
+        </div>
+        <div class="col-lg-2 col-lg-offset-1 text-center">
+            <a href="https://instagram/sailsignetorg">
+                <i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>sailsignetorg</p>
+            </a>
+        </div>
     </div>
 </section>
