--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,14 +12,14 @@
             <div class="col-lg-6 col-sm-6 text-center">
                 <div class="service-box">
                     <img class="charity-img" src="/img/rnli.png">
-                    <h3>RNLI</h3>
+                    <h3><a href="https://rnli.org/">RNLI</a></h3>
                     <p class="text-muted">The RNLI is the charity that saves lives at sea. They do this through lifeboat search and rescue, lifeguards, water safety education, and flood rescue.</p>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6 text-center">
                 <div class="service-box">
                     <img class="charity-img" src="/img/emct.png">
-                    <h3>Ellen MacArthur Cancer Trust</h3>
+                    <h3><a href="https://www.ellenmacarthurcancertrust.org/">Ellen MacArthur Cancer Trust</a></h3>
                     <p class="text-muted">The Ellen MacArthur Cancer Trust inspires young people aged 8-24 to believe in a brighter future living through and beyond cancer.</p>
                 </div>
             </div>
