--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -8,7 +8,7 @@
                         <div class="portfolio-box-caption-content">
 
                             <div class="project-name">
-                                ST 50 and 14 crossing the Channel!
+                                ST 50 and 14 en route to Calais!
                             </div>
                         </div>
                     </div>
