Add Morgan Sails

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -21,6 +21,12 @@
                     <h3><a href="https://wessexresins.co.uk/">Wessex Resins + Adhesives</a></h3>
                 </div>
             </div>
+            <div class="col-lg-6 col-sm-6 text-center">
+                <div class="service-box">
+                    <img class="charity-img" src="/img/morgansails.jpg">
+                    <h3><a href="https://morgan-sails.com">Morgan Sails</a></h3>
+                </div>
+            </div>
         </div>
     </div>
 </section>
