--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -27,6 +27,12 @@
                     <h3><a href="https://morgan-sails.com">Morgan Sails</a></h3>
                 </div>
             </div>
+            <div class="col-lg-6 col-sm-6 text-center">
+                <div class="service-box">
+                    <img class="charity-img" src="/img/eddiemurphy.jepg">
+                    <h3><a href="http://eddiemurphyfs.com">Eddie Murphy Financial Services</a></h3>
+                </div>
+            </div>
         </div>
     </div>
 </section>
