--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center">
                 <div class="service-box">
-                    <img class="charity-img" src="/img/rnli.png">
+                    <img class="charity-img" src="/img/rnli.jpeg">
                     <h3><a href="https://rnli.org/">RNLI</a></h3>
                     <p class="text-muted">The RNLI is the charity that saves lives at sea. They do this through lifeboat search and rescue, lifeguards, water safety education, and flood rescue.</p>
                 </div>
