--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -29,7 +29,7 @@
             </div>
             <div class="col-lg-6 col-sm-6 text-center">
                 <div class="service-box">
-                    <img class="charity-img" src="/img/eddiemurphy.jepg">
+                    <img class="charity-img" src="/img/eddiemurphy.jpeg">
                     <h3><a href="http://eddiemurphyfs.com">Eddie Murphy Financial Services</a></h3>
                 </div>
             </div>
