--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,12 @@
                     <a class="page-scroll" href="#photos">Photos</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#partners">Partners</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#raffle">Raffle</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#contact">Support Us</a>
                 </li>
             </ul>
