--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -10,6 +10,7 @@
   {% include services.html %}
   {% include portfolio.html %}
   {% include partners.html %}
+  {% include raffle.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
