--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,4 +1,4 @@
-<section id="charity">
+<section id="partners">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
