--- a/_includes/raffle.html
+++ b/_includes/raffle.html
@@ -29,6 +29,12 @@
                     <h4>SigneT branded 90L sailing bags courtesy of Morgan Sails</h4>
                 </div>
             </div>
+            <div class="col-lg-6 col-sm-6 text-center">
+                <div class="service-box">
+                    <img class="raffle-img" src="/img/waitrose.jpeg">
+                    <h4>Wine donated by Waitrose</h4>
+                </div>
+            </div>
             
         </div>
     </div>
