--- a/_includes/raffle.html
+++ b/_includes/raffle.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Raffle</h2>
-                <h4>Tickets wille be launched at the <a href="http://www.cvrda.org/events/hunts-rally-2/">CVRDA Rally at Hunts</a> on 29th April. Tickets available until the draw on 10th June.</h4> 
+                <h4><a href="https://www.gofundme.com/f/60th-anniversary-signet-sail">Donate</a> to enter the raffle, adding <b>RAFFLESIGNET60</b> to the donation message. Tickets available until the draw on 10th June.</h4> 
                 <p>Below is a selection of prizes we will have! More prizes to come!</p>
                 <hr class="primary">
             </div>
