--- a/_includes/raffle.html
+++ b/_includes/raffle.html
@@ -20,7 +20,7 @@
             <div class="col-lg-6 col-sm-6 text-center">
                 <div class="service-box">
                     <img class="raffle-img" src="/img/westsystems-raffle.jpeg">
-                    <h4>A selection of West System product courtesy of Wessex Resin (photo for reference)</h4>
+                    <h4>3x West System product courtesy of Wessex Resin (photo for reference)</h4>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6 text-center">
