--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -33,6 +33,12 @@
                     <h3><a href="http://eddiemurphyfs.com">Eddie Murphy Financial Services</a></h3>
                 </div>
             </div>
+            <div class="col-lg-6 col-sm-6 text-center">
+                <div class="service-box">
+                    <img class="charity-img" src="/img/f10marine.png">
+                    <h3><a href="https://www.f10marine.com/">F10 Marine</a></h3>
+                </div>
+            </div>
         </div>
     </div>
 </section>
