--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,6 +8,7 @@
   {% include header.html %}
   {% include call-to-action.html %}
   {% include services.html %}
+  {% include tracker.html %}
   {% include portfolio.html %}
   {% include partners.html %}
   {% include raffle.html %}
