Add tracker to nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
                     <a class="page-scroll" href="#charity">Charity</a>
                 </li>
                 <li>
+                    <a clas="page-scroll" href="#tracker">Tracker</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#photos">Photos</a>
                 </li>
                 <li>
