Add Google Doc live log

--- a/_includes/tracker.html
+++ b/_includes/tracker.html
@@ -7,19 +7,6 @@
                 <hr class="primary">
             </div>
         </div>
-        <!--
-        <script type="text/javascript">
-            // Map appearance
-            var width = "100%";         // width in pixels or percentage
-            var height = "300";         // height in pixels
-            var names = true;           // always show ship names (defaults to false)
-
-            // Single ship tracking
-            var mmsi = "235019388";        // display latest position (by IMO, overrides MMSI)
-            var show_track = true;      // display track line (last 24 hours)
-        </script>
-        <script type="text/javascript" src="https://www.vesselfinder.com/aismap.js"></script>
-        -->
         <script type="text/javascript">
             width = '100%';		// the width of the embedded map in pixels or percentage
             height = '500';		// the height of the embedded map in pixels or percentage
@@ -33,5 +20,7 @@
             fleet = '';		// the registered email address of a user-defined fleet (user's default fleet is used) - overrides "zoom" option
         </script>
         <script type="text/javascript" src="//www.marinetraffic.com/js/embed.js"></script>
+        <br>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vSVyFw_FKrDaPTU2dQrBxshYF77030u11xVqSEkq1a_C52lSdzA_zznpN_LPWY5h1Q6wcHQihh-b5E1/pub?embedded=true"></iframe>
     </div>
 </section>
