--- a/_includes/tracker.html
+++ b/_includes/tracker.html
@@ -21,6 +21,6 @@
         </script>
         <script type="text/javascript" src="//www.marinetraffic.com/js/embed.js"></script>
         <br>
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vSVyFw_FKrDaPTU2dQrBxshYF77030u11xVqSEkq1a_C52lSdzA_zznpN_LPWY5h1Q6wcHQihh-b5E1/pub?embedded=true"></iframe>
+        <iframe style="width: 100%;height: 500px" src="https://docs.google.com/document/d/e/2PACX-1vSVyFw_FKrDaPTU2dQrBxshYF77030u11xVqSEkq1a_C52lSdzA_zznpN_LPWY5h1Q6wcHQihh-b5E1/pub?embedded=true"></iframe>
     </div>
 </section>
