--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:title" content='60th Anniversary SigneT Dover to Calais' />
+    <meta property="og:image" content="/img/header.jpg"/>
+    <meta property="og:description" content='This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of RNLI and Ellen MacArthur Cancer Trust!' />
+    <meta property="og:url" content='https://signet60.sailsignet.org.uk' />
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
 
     <title>60th Anniversary SigneT Dover to Calais </title>
 
