--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta property="og:title" content='60th Anniversary SigneT Dover to Calais' />
-    <meta property="og:image" content="/img/header.jpg"/>
+    <meta property="og:image" content="https://signet60.sailsignet.org.uk/img/header.jpg"/>
     <meta property="og:description" content='This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of RNLI and Ellen MacArthur Cancer Trust!' />
     <meta property="og:url" content='https://signet60.sailsignet.org.uk' />
     <meta property='og:image:width' content='1200' />
