Add report to website

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -12,6 +12,8 @@
                 <br>
                 <br>
                 <a href="https://gofund.me/b0fb7163" target="_blank" class="btn btn-default btn-xl">Donate!</a>
+                
+                <a href="/report" style="margin: 20px" class="btn btn-default btn-xl">Report!</a>
             </div>
         </div>
     </div>
