--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,6 +27,9 @@
                     <a class="page-scroll" href="#photos">Photos</a>
                 </li>
                 <li>
+                    <a href="/report">Report</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#partners">Partners</a>
                 </li>
                 <li>
