--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -357,3 +357,30 @@ body {
     background-size: cover;
     width: 100%;
 }
+
+.report {
+    margin: 50px;
+
+    h1 {
+        font-size: 36px !important;
+        font-weight: 600;
+        width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+    }
+
+    p {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    img {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+}
