--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -365,9 +365,16 @@ body {
         font-size: 36px !important;
         font-weight: 600;
         width: 90%;
-            margin-left: auto;
-            margin-right: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
+
+    h3 {
+        font-size: 24px !important;
+        font-weight: 400;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
 
     p {
         width: 90%;
