--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -370,8 +370,9 @@ body {
     }
 
     h3 {
-        font-size: 24px !important;
+        font-size: 16px !important;
         font-weight: 400;
+        font-style: italic;
         width: 90%;
         margin-left: auto;
         margin-right: auto;
