--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -376,7 +376,8 @@ body {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-
+    }
+    
     p {
         width: 90%;
         margin-left: auto;
