--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -377,7 +377,15 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
-    
+
+    h4 {
+        font-size: 12px !important;
+        font-weight: 400;
+        font-style: italic;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     p {
         width: 90%;
         margin-left: auto;
