--- a/_layouts/report.html
+++ b/_layouts/report.html
@@ -1,7 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Will Russell">
+    <meta property="og:title" content='Report | 60th Anniversary SigneT Dover to Calais' />
+    <meta property="og:image" content="https://signet60.sailsignet.org.uk/img/report/11.jpeg"/>
+    <meta property="og:description" content='On 11th June 2023, the SigneT Class Owners Association completed a tribute to this voyage in aid of the RNLI and Ellen MacArthur Cancer Trust!' />
+    <meta property="og:url" content='https://signet60.sailsignet.org.uk' />
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+
+    <title>SigneT60 Report</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+    <!-- Custom Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel='icon' href='/img/favicon.ico' type='image/x-icon' />
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
 
 <body id="page-top">
     {% include nav-report.html %}
