--- a/_layouts/report.html
+++ b/_layouts/report.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content='Report | 60th Anniversary SigneT Dover to Calais' />
     <meta property="og:image" content="https://signet60.sailsignet.org.uk/img/report/11.jpeg"/>
     <meta property="og:description" content='On 11th June 2023, the SigneT Class Owners Association completed a tribute to this voyage in aid of the RNLI and Ellen MacArthur Cancer Trust!' />
-    <meta property="og:url" content='https://signet60.sailsignet.org.uk' />
+    <meta property="og:url" content='https://signet60.sailsignet.org.uk/report' />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
 
