Add new photos and update site for post event

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -11,9 +11,7 @@
                 <h3>Where: Dover to Calais</h3>
                 <br>
                 <br>
-                <a href="https://gofund.me/b0fb7163" target="_blank" class="btn btn-default btn-xl">Donate!</a>
-                
-                <a href="/report" style="margin: 20px" class="btn btn-default btn-xl">Report!</a>
+                <a href="https://gofund.me/b0fb7163" target="_blank" class="btn btn-default btn-xl">See how much we raised!</a>
             </div>
         </div>
     </div>
