--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,12 +3,12 @@
         <div class="row no-gutter">
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="img/report/6.jpeg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-
+                            
                             <div class="project-name">
-                                ST 50 and 14 en route to Calais!
+                                ST921 launching from Dover in 2023!
                             </div>
                         </div>
                     </div>
@@ -16,12 +16,90 @@
             </div>
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
+                    <img src="img/report/3.jpeg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            
+                            <div class="project-name">
+                                The 2023 Sailing Team ready to go!
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/report/10.jpeg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            
+                            <div class="project-name">
+                                ST924 on its way to Calais in 2023!
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/report/11.jpeg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+            
+                            <div class="project-name">
+                                ST921 passing cargo ships in 2023!
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/report/17.jpeg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            
+                            <div class="project-name">
+                                ST924 on the final stretch to Calais in 2023!
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/report/18.jpeg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            
+                            <div class="project-name">
+                                Both boats landing in Calais in 2023
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-
                             <div class="project-name">
-                                SigneT with the White Cliffs of Dover in the background!
+                                SigneT with the White Cliffs of Dover in the background in 1963!
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+            
+                            <div class="project-name">
+                                ST 50 and 14 en route to Calais in 1963!
                             </div>
                         </div>
                     </div>
