--- a/_includes/tracker.html
+++ b/_includes/tracker.html
@@ -3,10 +3,12 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Tracker</h2>
-                <p>Below, you can track the pilot boat that will be joining us for this voyage!</p>
+                <p>Below, you can see the path taken and the logbook taken during the voyage!</p>
                 <hr class="primary">
+                <a href="/report" style="margin: 20px" class="btn btn-primary btn-xl">Read The Report!</a>
             </div>
         </div>
+        <!--
         <script type="text/javascript">
             width = '100%';		// the width of the embedded map in pixels or percentage
             height = '500';		// the height of the embedded map in pixels or percentage
@@ -20,6 +22,10 @@
             fleet = '';		// the registered email address of a user-defined fleet (user's default fleet is used) - overrides "zoom" option
         </script>
         <script type="text/javascript" src="//www.marinetraffic.com/js/embed.js"></script>
+    -->
+        <br>
+        <div class="strava-embed-placeholder tracker-strava" style="width: 100%" data-embed-type="activity" data-embed-id="9248649804"></div>
+        <script src="https://strava-embeds.com/embed.js"></script>
         <br>
         <iframe style="width: 100%;height: 700px" src="https://docs.google.com/document/d/e/2PACX-1vSVyFw_FKrDaPTU2dQrBxshYF77030u11xVqSEkq1a_C52lSdzA_zznpN_LPWY5h1Q6wcHQihh-b5E1/pub?embedded=true"></iframe>
     </div>
