--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -16,12 +16,12 @@
             </div>
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/report/3.jpeg" class="img-responsive" alt="">
+                    <img src="img/report/9.jpeg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             
                             <div class="project-name">
-                                The 2023 Sailing Team ready to go!
+                                Both SigneTs leaving Dover in 2023!
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                         <div class="portfolio-box-caption-content">
                             
                             <div class="project-name">
-                                Both boats landing in Calais in 2023
+                                Both SigneTs landing in Calais in 2023
                             </div>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                         <div class="portfolio-box-caption-content">
             
                             <div class="project-name">
-                                ST 50 and 14 en route to Calais in 1963!
+                                ST50 and ST14 en route to Calais in 1963!
                             </div>
                         </div>
                     </div>
