--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -73,7 +73,7 @@
                         <div class="portfolio-box-caption-content">
                             
                             <div class="project-name">
-                                Both SigneTs landing in Calais in 2023
+                                Both SigneTs landing in Calais in 2023!
                             </div>
                         </div>
                     </div>
