--- a/_includes/raffle.html
+++ b/_includes/raffle.html
@@ -3,8 +3,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Raffle</h2>
-                <h4><a href="https://www.gofundme.com/f/60th-anniversary-signet-sail">Donate</a> to enter the raffle, adding <b>RAFFLESIGNET60</b> to the donation message. Tickets available until the draw on 10th June.</h4> 
-                <p>Below is a selection of prizes we will have! More prizes to come!</p>
+                <p>The raffle has taken place. See some of the great prizes our partners donated!</p>
                 <hr class="primary">
             </div>
         </div>
