Update contact info

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>Wanting to provide sponsorship or support us in another way, get in touch!</p>
+                <p>Want to get in touch?</p>
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="mailto:{{ site.email }}">
